<resources>
    <string name="app_name">Car App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_fragment_fuel">Fuel Transactions</string>
    <string name="title_fragment_fuel_add">Add Fuel</string>
    <string name="title_fragment_fuel_edit">Edit Fuel</string>
    <string name="title_fragment_vehicle_add">Add Vehicle</string>
    <string name="title_fragment_vehicle_edit">Edit Vehicle</string>
    <string name="vehicle_no_available">No Available Vehicle</string>
    <string name="vehicle_title">%1$s %2$s %3$d</string>
    <string name="fuel_price">$%1$s / L</string>
    <string name="fuel_volume">%1$sL</string>
    <string name="fuel_cost">$%1$s</string>
    <string name="fuel_mileage">%1$s Km/L</string>
    <string name="fuel_priceKm">$%1$s / Km</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Login</string>
    <string name="make_text">Make</string>
    <string name="model_text">Model</string>
    <string name="year_text">Year</string>
    <string name="name_text">Name</string>
    <string name="save_text">Save</string>
    <string name="your_vehicles_text">Your Vehicles</string>
    <string name="loading_text">Loading...</string>
    <string name="date_colon_text">Date:</string>
    <string name="odometer_colon_text">Odometer:</string>
    <string name="price_colon_text">Price:</string>
    <string name="volume_colon_text">Volume:</string>
    <string name="mileage_colon_text">Mileage:</string>
    <string name="price_per_km_colon_text">Price/Km:</string>
    <string name="cost_colon_text">Cost:</string>
    <string name="full_tank_text">Full Tank</string>
    <string name="missed_fillup_text">Missed Fillup</string>
    <string name="estimated_odometer_text">Estimated Odometer</string>
    <string name="date_time_colon_text">Date/Time:</string>
    <string name="edit_text">Edit</string>
    <string name="delete_text">Delete</string>
    <string name="refresh_text">Refresh</string>
    <string name="logout_text">Logout</string>
    <string name="action">Action</string>
</resources>
