<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bhoodz.carapp.MainActivity">
    <group android:id="@+id/menuMaintainGroup">
        <item
            android:id="@+id/menuEditItem"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/edit_text"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menuDeleteItem"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/delete_text"
            app:showAsAction="ifRoom" />
    </group>
    <item
        android:id="@+id/menuLogout"
        android:title="@string/logout_text"
        app:showAsAction="withText" />
</menu>
